syntax = "proto3";
option csharp_namespace = "Crystal_Growth_Monitor.grpc";

service StreamService {
  rpc Stream(stream Frame) returns (stream Frame);
}

message Frame {
    uint64 seq = 1;
    string payload = 2;
}